# cargo-initializr

./: .env  Cargo.toml  README.md
backend/: .env  Cargo.toml  rust-toolchain.toml
backend/content/: common_tools_starter.toml
backend/postman_requests/: cargo_init_requests.postman_collection.json
backend/src/: app.rs  extractor.rs  handlers.rs  logging.rs  macros.rs  main.rs  starter_dto.rs
backend/src/cargo_toml_parser_extensions/: impls.rs  traits.rs
backend/src/project_description_dto/: package_description.rs
backend/src/repository/: hash_map_starter_repository.rs  mod.rs
backend/src/service/: compressor.rs  mod.rs  project.rs  project_generation_service.rs  starter_service.rs  traits.rs
backend/src/storage/: errors.rs  in_memory_storage.rs  mod.rs  traits.rs
common/: Cargo.toml
common/src/: lib.rs  project_description_dto.rs  starter.rs  starter_dto.rs
common/src/project_description_dto/: package_description.rs  target_kind.rs
common/src/starter/: raw_starter.rs
content/: common_tools_starter.toml  tokio_starter.toml
frontend/: .env  Cargo.toml  index.html  serve.ers
frontend/src/: config.rs  left_section.rs  main.rs  right_section.rs  starters.rs  stores.rs
frontend/src/right_section/: generate_button.rs  starter_selection_popup.rs
frontend/static/: styles.css
frontend/static/starter_selection/: find_starter.css  starter_selection_list.css  starter_selection_popup.css
src/: app.rs  compressor.rs  generate_service.rs  handlers.rs  macros.rs  main.rs  project_description_dto.rs  starter_dto.rs  starter_service.rs
src/cargo_toml_parser_extensions/: errors.rs  impls.rs
src/generate_service/: generator.rs  traits.rs
src/project_description_dto/: file_name.rs  package_description.rs  target_kind.rs
src/service/: compressor.rs  mod.rs  project_generation_service.rs  project_generator.rs  project_generator_service.rs  starter_service.rs
