[package]
name = "cargo-initializr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#core
actix-web = "4.3.1"

#serde
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

#common_tools
futures  = "0.3.28"
dotenv = "0.15.0"
chrono = "0.4.24"
filepath = "0.1.2"
thiserror = "1.0.40"

#generating_tools
cargo-toml-builder = "0.3.0"
zip = "0.6.4"
walkdir = "2"

#logging
tracing-actix-web = "0.7.2"
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["env-filter"] }