[package]
name = "test"
version = "1.0.0"
edition = "2021"
authors = ["vlad"]
license = "MIT"
description = "desc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["serde/derive"]

[dependencies]
#core
actix-web = "4.3.1"

#serde
serde = "1.0.156"
#serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

#common_tools
futures  = "0.3.28"
dotenv = "0.15.0"
chrono = "0.4.24"
filepath = "0.1.2"
thiserror = "1.0.40"
version-compare = "0.1.1"

#generating_tools
cargo-toml-builder = "0.3.0"
cargo_toml = "0.15.2"
zip = "0.6.4"
walkdir = "2"
toml = "0.7.3"

#logging
tracing-actix-web = "0.7.2"
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["env-filter"] }