[package]
name = "frontend"
version = "1.0.0"
edition = "2021"
authors = ["Vlad Matiukhin <vlad.matiukhin@gmail.com>"]
license = "MIT"
description = "Frontend part for Cargo_Initializr (It like Spring Initializr but for Cargo)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#core
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
yewdux-input = "0.1.0"
common = { path = "../common" }
serde = { version = "1.0.164", features =["derive"] }
dotenv = "0.15.0"

#wasm_stuff
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
reqwasm = "0.5.0"

#logging
log = "0.4.6"
wasm-logger = "0.2.0"
